# Alpharobotics

./: CMakeLists.txt  contributors.txt  install_depends.sh
data/: 1.bvm  chat_operator_cofig.json  server.crt  server.csr  server.key  server.pem  wifi_test.html
docs/: Kiki service analitics.xls  KikiService.dia  Редактор пресетов.dia  Редактор событий.dia  Структура системы управления роботом.dia  Структура системы управления роотом.dia  Экраны админки.dia  доступы
robot_packge/: 000-default.conf  ws-saver.sh
robot_packge/alfa_robot/: index.html  robot_address.json  robot_config.json  smiles.json
robot_packge/alfa_robot/css/: new-style.css
robot_packge/alfa_robot/js/: alarms.js  kiki.js  room_service.js  utils.js  wifi.js
robot_packge/media/: media.json
src/audio-to-text/: AudioToTextServer.cpp  AudioToTextServer.hpp  CMakeLists.txt  main.cpp
src/chat-bot/: CMakeLists.txt  ChatBotServer.cpp  ChatBotServer.hpp
src/consultant/: CMakeLists.txt  ConsultantServer.cpp  ConsultantServer.hpp
src/controller/: CMakeLists.txt  ControllerServer.cpp  ControllerServer.hpp
src/face-detector/: CMakeLists.txt  FaceDetectorServer.cpp  FaceDetectorServer.hpp  main.cpp
src/foodprod-classifier/: AddFoodprodClassifierWorker.cpp  AddFoodprodClassifierWorker.hpp  BaseClassifierWorker.cpp  BaseClassifierWorker.hpp  CMakeLists.txt  ColorsTransformation.cpp  ColorsTransformation.hpp  ContouresTransformation.cpp  ContouresTransformation.hpp  FoodprodClassifier.cpp  FoodprodClassifier.hpp  FoodprodClassifierWorker.cpp  FoodprodClassifierWorker.hpp  FourierTransformation.cpp  FourierTransformation.hpp  NbClassifier.cpp  NbClassifier.hpp  NbClassifierModel.cpp  NbClassifierModel.hpp  ShiTomasiCornerDetectionTransformation.cpp  ShiTomasiCornerDetectionTransformation.hpp  Transformation.hpp  main.cpp
src/interfaces/: TTSService.thrift  base.thrift
src/media-saver/: CMakeLists.txt  MediaSaverServer.cpp  MediaSaverServer.hpp
src/scripts/: alfa-operator-services.sh  alfa-robot-services.sh  ws-robot.sh  ws-translator.sh  ws-wifi.sh
src/tests/: CMakeLists.txt
src/text-to-audio/: CMakeLists.txt  TTSClient.cpp  TTSServer.cpp  TTSService.cpp  TTSService.h  TTSService_constants.cpp  TTSService_constants.h  TTSService_types.cpp  TTSService_types.h  WebTTSServer.cpp  rus_locale.xml  styles.css
src/tools/: CMakeLists.txt  alfa-robot-services.sh  ttt.sh  video-service.sh  w_tect.txt  web_chat_operator_server.cpp  web_media_loader.cpp  web_play_server.cpp  web_presets_server.cpp  web_roomer_server.cpp  web_storadge.cpp  web_storadge.css  web_storadge_rus_locale.xml  wine_nuance_vautodemo_server.cpp  ws_file_uploader.cpp  ws_frame_server.cpp  ws_json_saver.cpp  ws_robot_server.cpp  ws_signaling_server.cpp  ws_wifi_server.cpp
src/translator/: BaseWorker.cpp  BaseWorker.hpp  CMakeLists.txt  ClientTranslatorWorker.cpp  ClientTranslatorWorker.hpp  OperatorTranslatorWorker.cpp  OperatorTranslatorWorker.hpp  main.cpp
src/utils/: CMakeLists.txt  Demangle.cpp  Demangle.hpp  FibonacciReduction.cpp  FibonacciReduction.hpp  Log.cpp  Log.hpp  RoomController.hpp  ServiceHandler.cpp  ServiceHandler.hpp  SignalDispatcher.hpp  Singleton.hpp  ThreadPool.cpp  ThreadPool.hpp
src/websocket/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.hpp  WsServer.cpp  WssServer.cpp  server_ws.hpp  servers.cpp
src/www/admin/: admin_config.json  index.html  main.js  style.css
src/www/alfa_operator/: _robot_address.json  index.html  presets.json  robot_address.json  settings.json  smiles.json  smiles.json.save
src/www/alfa_robot/: __robot_address.json  index.html  presets.json  robot_address.json  robot_config.json  settings.json  settings_eng.json  wifi_list_example.json  wifi_status_example.json
src/www/asr_robot/: index.html  lightbox.js  main.js  robot_config.json  robot_stt_config.json  styles.css  test.json  utils.js
src/www/face_tracker/: config.json  index.html
src/www/file_loader/: index.html
src/www/foodprod_checker/: classifi.html  index.html
src/www/media_devices/: index.html
src/www/mic_p2p/: index.html
ssl/: alfarobotix.crt  alfarobotix.key
(+92 files in other folders)
